[tool.poetry]
name = "phasor"
version = "0.1.0"
description = ""
authors = ["Aditya Gupta <aditsuyag@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
